[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lp-radar"
version = "0.1.0"
description = "Korean institutional fund announcement scraper"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "openpyxl>=3.1",
    "flask>=3.0",
]

[project.scripts]
lp-radar = "lp_radar.main:main"
lp-radar-web = "lp_radar.web:main"

[tool.setuptools.packages.find]
where = ["src"]
